[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros", "compress-gzip", "rustls"] }
awc = "3"
rustls = "0.20"
rcgen = "0.10"

[[bin]]
name = "reverse_proxy"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1